# devflow

./: .devflow.example.toml  .devflow.global.example.toml  .gitignore  DEVFLOW_CONFIG.md  MODELS.md  README.md  pyproject.toml
diagrams/: text-review.mmd
scripts/: draw_code_review.py  draw_text_review.py  run_code_review.py  run_text_review.py
src/devflow/: cli.py  config.py
src/devflow/code_review/: __init__.py  config.py  flow.py  graph.py  models.py  nodes.py  schemas.py  state.py  tasks.py
src/devflow/implementation/: __init__.py  aider.py  flow.py  grounding.py  schemas.py
src/devflow/planning/: __init__.py  artifacts.py  config.py  context.py  flow.py  graph.py  human_input.py  nodes.py  research.py  schemas.py  serena.py  state.py  tasks.py
src/devflow/repository_context/: __init__.py  config.py  flow.py  serena.py
src/devflow/review/: graph.py
src/devflow/text_review/: flow.py  graph.py  models.py  nodes.py  schemas.py  state.py  tasks.py
tests/: test_aider_implementation.py  test_code_review_nodes.py  test_config.py  test_implementation_flow.py  test_implementation_grounding.py  test_planning_artifacts.py  test_planning_context.py  test_planning_flow.py  test_planning_nodes.py  test_serena_context.py  test_serena_spike.py
